<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashes"
    tools:context=".LoginActivity">
    <!-- Dominik Erbacher | 5016085 -->

    <TextView
        android:id="@+id/multiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/registerTitle"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer" />

    <EditText
        android:id="@+id/passwordRegister2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"

        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"

        android:paddingStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/profilepic"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer"
        app:srcCompat="@drawable/ic_action_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/passwordicon"
        app:layout_constraintEnd_toStartOf="@+id/passwordRegister2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_action_password" />


    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/createAccount"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister2" />




</android.support.constraint.ConstraintLayout>