<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background = "@drawable/dashes"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    tools:layout_editor_absoluteY="81dp">

    <!-- Dominik Erbacher | 5016085 -->

    <TextView
        android:id="@+id/RicRob"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ricochet"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="48sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ricRob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robots"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="48sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RicRob" />

    <Button
        android:id="@+id/tutorial"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/tut"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ricRob"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/singleplayer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/multiplayer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/mp"
        android:textColor="@android:color/background_light"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleplayer"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/settings"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"

        android:text="@string/settings"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/aboutus"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/aboutus"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        tools:context=".MainActivity" />


</android.support.constraint.ConstraintLayout>