<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background = "@drawable/dashes"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    tools:layout_editor_absoluteY="81dp">

    <!-- Dominik Erbacher | 5016085 -->

    <TextView
        android:id="@+id/usernameText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer2" />

    <TextView
        android:id="@+id/multiplayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/mp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tutorial"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/roundedbutton2"
        android:text="@string/createGame"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText1"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/singleplayer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedbutton2"
        android:text="@string/joinGame"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/multiplayer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundedbutton2"
        android:text="Invites"
        android:textColor="@android:color/background_light"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleplayer"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/showProfile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"

        android:background="@drawable/roundedbutton2"
        android:text="@string/showProfile"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/automatchButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"

        android:layout_marginTop="12dp"
        android:background="@drawable/roundedbutton2"
        android:text="Automatch"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showProfile"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/localMultiplayer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"

        android:layout_marginTop="12dp"
        android:background="@drawable/roundedbutton2"
        android:text="Local Multiplayer"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/automatchButton"
        tools:context=".MainActivity" />


</android.support.constraint.ConstraintLayout>